# trading-bot

./: .pre-commit-config.yaml  logger.py  main.py  pyproject.toml  trader.py
backtest/: backtest.py  constants.py  main.py  utils.py
backtest/data/: BNKU.csv  BTC-USD.csv  BULZ.csv  CURE.csv  DOGE-USD.csv  EDC.csv  ERY.csv  ETH-USD.csv  FAS.csv  FNGD.csv  FNGO.csv  FNGU.csv  KORU.csv  LABU.csv  NAIL.csv  NRGU -> O.csv  OILU.csv  PILL.csv  SOXL.csv  SPXL.csv  SQQQ.csv  TECL.csv  TMF.csv  TNA.csv  TQQQ.csv
