[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["Julie Lee <julielee9067@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.12.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
