[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["Julie Lee <julielee9067@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alpaca-py = "^0.12.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
colorlog = "^6.7.0"
pytest = "^7.4.2"
pytz = "^2023.3.post1"
types-pytz = "^2023.3.1.1"
schedule = "^1.2.1"
yfinance = "^0.2.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
